cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
cmake_policy(SET CMP0048 NEW)
set(CMAKE_C_STANDARD 11)
set(PACKAGE_VERSION 1.0)
set(PACKAGE_BUGREPORT https://github.com/EZ3CHI3L/Eternity/issues)
include(GNUInstallDirs)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
project(eternity VERSION ${PACKAGE_VERSION} LANGUAGES C)
enable_testing()
find_package(cmocka 1.1.1 CONFIG REQUIRED)
add_subdirectory(src)
